<<<<<<< HEAD
<resources>
    <string name="app_name">My Health</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Farhan Tanvir Utshaw</string>
    <string name="nav_header_subtitle">Bangladesh University of Engineering and Technology</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="chemistry">some</string>
    <string name="call_chem_teacher">some</string>
    <string name="physics">some</string>
    <string name="call_phys_teacher">some</string>
    <string name="math">some</string>
    <string name="call_math_teacher">some</string>
    <string name="my_profile">some</string>
    <string name="action_signout">Sign Out</string>


</resources>
=======
<resources>
    <string name="app_name">Healthy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Farhan Tanvir Utshaw</string>
    <string name="nav_header_subtitle">Bangladesh University of Engineering and Technology</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="chemistry">some</string>
    <string name="t23">some</string>
    <string name="physics">some</string>
    <string name="call_phys_teacher">some</string>
    <string name="math">some</string>
    <string name="call_math_teacher">some</string>
    <string name="my_profile">some</string>
    <string name="action_signout">Sign Out</string>

    <string name="FACEBOOK_APP_ID">289952104998233</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">[ACCOUNT_KIT_CLIENT_TOKEN]</string>


    <string name="API_SECURITY_KEY">fAwKa7NDMWCO88ifAF7a</string>


</resources>
>>>>>>> 9d6b7cf7dcd74320e2e145ad88af2799dd7c1858
